Upgrade Elasticsearch to version 5.4.3.
Signed-off-by: Paulo Pires <pjpires@gmail.com>