@@ -1,5 +1,5 @@
 # kubernetes-elasticsearch-cluster
-Elasticsearch (5.4.0) cluster on top of Kubernetes made easy.
+Elasticsearch (5.4.3) cluster on top of Kubernetes made easy.
 
 ### Table of Contents
 
@@ -7,7 +7,7 @@ Elasticsearch (5.4.0) cluster on top of Kubernetes made easy.
 * [Pre-Requisites](#pre-requisites)
 * [Build-Images(optional)](#build-images)
 * [Test (deploying & accessing)](#test)
-* [Scheduling pods](#scheduling)
+* [Pod anti-affinity](#pod-anti-affinity)
 * [Deploying with Helm](#helm)
 * [Install plug-ins](#plugins)
 * [Clean up with Curator](#curator)
@@ -41,7 +41,7 @@ One can change this in the deployment descriptors available in this repository.
 
 ## Pre-requisites
 
-* Kubernetes cluster with **alpha features enabled** (tested with v1.5.2 on top of [Vagrant + CoreOS](https://github.com/pires/kubernetes-vagrant-coreos-cluster))
+* Kubernetes cluster with **alpha features enabled** (tested with v1.6.6 on top of [Vagrant + CoreOS](https://github.com/pires/kubernetes-vagrant-coreos-cluster))
 * `kubectl` configured to access the cluster master API Server
 
 <a id="build-images">
@@ -69,55 +69,58 @@ kubectl create -f es-data.yaml
 Wait for containers to be in the `Running` state and check one of the Elasticsearch master nodes logs:
 ```
 $ kubectl get svc,deployment,pods
-NAME                          CLUSTER-IP      EXTERNAL-IP   PORT(S)          AGE
-svc/elasticsearch             10.100.75.158   <pending>     9200:31163/TCP   3m
-svc/elasticsearch-discovery   10.100.182.93   <none>        9300/TCP         3m
-svc/kubernetes                10.100.0.1      <none>        443/TCP          1h
+NAME                          CLUSTER-IP       EXTERNAL-IP   PORT(S)          AGE
+svc/elasticsearch             10.100.254.59    <pending>     9200:30372/TCP   4m
+svc/elasticsearch-discovery   10.100.137.209   <none>        9300/TCP         4m
+svc/kubernetes                10.100.0.1       <none>        443/TCP          24m
 
 NAME               DESIRED   CURRENT   UP-TO-DATE   AVAILABLE   AGE
-deploy/es-client   2         2         2            2           32s
-deploy/es-data     2         2         2            2           32s
-deploy/es-master   3         3         3            3           3m
+deploy/es-client   2         2         2            2           2m
+deploy/es-data     2         2         2            2           1m
+deploy/es-master   3         3         3            3           4m
 
 NAME                            READY     STATUS    RESTARTS   AGE
-po/es-client-3170561982-djb1f   1/1       Running   0          32s
-po/es-client-3170561982-mwfhs   1/1       Running   0          32s
-po/es-data-1526844084-4mfg3     1/1       Running   0          31s
-po/es-data-1526844084-8njx2     1/1       Running   0          31s
-po/es-master-2212299741-0x880   1/1       Running   0          3m
-po/es-master-2212299741-1j9lm   1/1       Running   0          3m
-po/es-master-2212299741-p1jrt   1/1       Running   0          3m
+po/es-client-3752325057-68zl4   1/1       Running   0          2m
+po/es-client-3752325057-rxk8p   1/1       Running   0          2m
+po/es-data-2088356535-kdsk8     1/1       Running   0          1m
+po/es-data-2088356535-qbsrc     1/1       Running   0          1m
+po/es-master-2805466080-9j3zn   1/1       Running   0          4m
+po/es-master-2805466080-fmjxw   1/1       Running   0          4m
+po/es-master-2805466080-g7hr5   1/1       Running   0          4m
 ```
 
 ```
-$ kubectl logs po/es-master-2212299741-0x880
-[2017-05-10T08:57:49,686][INFO ][o.e.n.Node               ] [es-master-2212299741-0x880] initializing ...
-[2017-05-10T08:57:49,793][INFO ][o.e.e.NodeEnvironment    ] [es-master-2212299741-0x880] using [1] data paths, mounts [[/data (/dev/sda9)]], net usable_space [13.6gb], net total_space [15.5gb], spins? [possibly], types [ext4]
-[2017-05-10T08:57:49,794][INFO ][o.e.e.NodeEnvironment    ] [es-master-2212299741-0x880] heap size [247.5mb], compressed ordinary object pointers [true]
-[2017-05-10T08:57:49,797][INFO ][o.e.n.Node               ] [es-master-2212299741-0x880] node name [es-master-2212299741-0x880], node ID [NQTFaK_vRO6YixjB3_8cLQ]
-[2017-05-10T08:57:49,799][INFO ][o.e.n.Node               ] [es-master-2212299741-0x880] version[5.4.0], pid[12], build[780f8c4/2017-04-28T17:43:27.229Z], OS[Linux/4.10.12-coreos/amd64], JVM[Oracle Corporation/OpenJDK 64-Bit Server VM/1.8.0_121/25.121-b13]
-[2017-05-10T08:57:51,365][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [aggs-matrix-stats]
-[2017-05-10T08:57:51,365][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [ingest-common]
-[2017-05-10T08:57:51,366][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [lang-expression]
-[2017-05-10T08:57:51,366][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [lang-groovy]
-[2017-05-10T08:57:51,366][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [lang-mustache]
-[2017-05-10T08:57:51,366][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [lang-painless]
-[2017-05-10T08:57:51,366][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [percolator]
-[2017-05-10T08:57:51,366][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [reindex]
-[2017-05-10T08:57:51,366][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [transport-netty3]
-[2017-05-10T08:57:51,366][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] loaded module [transport-netty4]
-[2017-05-10T08:57:51,368][INFO ][o.e.p.PluginsService     ] [es-master-2212299741-0x880] no plugins loaded
-[2017-05-10T08:57:54,135][INFO ][o.e.d.DiscoveryModule    ] [es-master-2212299741-0x880] using discovery type [zen]
-[2017-05-10T08:57:54,868][INFO ][o.e.n.Node               ] [es-master-2212299741-0x880] initialized
-[2017-05-10T08:57:54,874][INFO ][o.e.n.Node               ] [es-master-2212299741-0x880] starting ...
-[2017-05-10T08:57:55,144][INFO ][o.e.t.TransportService   ] [es-master-2212299741-0x880] publish_address {10.244.8.2:9300}, bound_addresses {10.244.8.2:9300}
-[2017-05-10T08:57:55,159][INFO ][o.e.b.BootstrapChecks    ] [es-master-2212299741-0x880] bound or publishing to a non-loopback or non-link-local address, enforcing bootstrap checks
-[2017-05-10T08:57:58,387][INFO ][o.e.c.s.ClusterService   ] [es-master-2212299741-0x880] detected_master {es-master-2212299741-1j9lm}{NM2PTRGoTeumDqDX9HpPJA}{UYMXBCwlT1iRYA_n2xiIgg}{10.244.65.3}{10.244.65.3:9300}, added {{es-master-2212299741-p1jrt}{RiXtIv1MRZCWo5gLY49SOg}{COlIrU86QZCAGStFmYWhxA}{10.244.55.2}{10.244.55.2:9300},{es-master-2212299741-1j9lm}{NM2PTRGoTeumDqDX9HpPJA}{UYMXBCwlT1iRYA_n2xiIgg}{10.244.65.3}{10.244.65.3:9300},}, reason: zen-disco-receive(from master [master {es-master-2212299741-1j9lm}{NM2PTRGoTeumDqDX9HpPJA}{UYMXBCwlT1iRYA_n2xiIgg}{10.244.65.3}{10.244.65.3:9300} committed version [2]])
-[2017-05-10T08:57:58,433][INFO ][o.e.n.Node               ] [es-master-2212299741-0x880] started
-[2017-05-10T09:00:22,451][INFO ][o.e.c.s.ClusterService   ] [es-master-2212299741-0x880] added {{es-client-3170561982-djb1f}{O9m5ywLUQ4GkzxUSmlMaiA}{UrDy6jrUTm-7BolECTI1LA}{10.244.55.3}{10.244.55.3:9300},}, reason: zen-disco-receive(from master [master {es-master-2212299741-1j9lm}{NM2PTRGoTeumDqDX9HpPJA}{UYMXBCwlT1iRYA_n2xiIgg}{10.244.65.3}{10.244.65.3:9300} committed version [4]])
-[2017-05-10T09:00:22,628][INFO ][o.e.c.s.ClusterService   ] [es-master-2212299741-0x880] added {{es-data-1526844084-8njx2}{PvMdQGwGQt21D4ltTRyu0w}{ukaNsOurSImj4JB9vM4ofA}{10.244.8.3}{10.244.8.3:9300},}, reason: zen-disco-receive(from master [master {es-master-2212299741-1j9lm}{NM2PTRGoTeumDqDX9HpPJA}{UYMXBCwlT1iRYA_n2xiIgg}{10.244.65.3}{10.244.65.3:9300} committed version [5]])
-[2017-05-10T09:00:26,671][INFO ][o.e.c.s.ClusterService   ] [es-master-2212299741-0x880] added {{es-client-3170561982-mwfhs}{87v1IBw9TSecjwjrBZOpFw}{ywtU3PTGQ56KRLpdy1LnLg}{10.244.65.4}{10.244.65.4:9300},}, reason: zen-disco-receive(from master [master {es-master-2212299741-1j9lm}{NM2PTRGoTeumDqDX9HpPJA}{UYMXBCwlT1iRYA_n2xiIgg}{10.244.65.3}{10.244.65.3:9300} committed version [6]])
-[2017-05-10T09:00:28,684][INFO ][o.e.c.s.ClusterService   ] [es-master-2212299741-0x880] added {{es-data-1526844084-4mfg3}{F6EWBX0dTPuD0hXNcKqI-w}{ASI3slfvS6GIYweNQLoWpg}{10.244.65.5}{10.244.65.5:9300},}, reason: zen-disco-receive(from master [master {es-master-2212299741-1j9lm}{NM2PTRGoTeumDqDX9HpPJA}{UYMXBCwlT1iRYA_n2xiIgg}{10.244.65.3}{10.244.65.3:9300} committed version [7]])
+$ kubectl logs po/es-master-2805466080-9j3zn
+[2017-06-29T08:59:38,312][INFO ][o.e.n.Node               ] [es-master-2805466080-9j3zn] initializing ...
+[2017-06-29T08:59:38,386][INFO ][o.e.e.NodeEnvironment    ] [es-master-2805466080-9j3zn] using [1] data paths, mounts [[/data (/dev/sda9)]], net usable_space [13.6gb], net total_space [15.5gb], spins? [possibly], types [ext4]
+[2017-06-29T08:59:38,386][INFO ][o.e.e.NodeEnvironment    ] [es-master-2805466080-9j3zn] heap size [247.5mb], compressed ordinary object pointers [true]
+[2017-06-29T08:59:38,387][INFO ][o.e.n.Node               ] [es-master-2805466080-9j3zn] node name [es-master-2805466080-9j3zn], node ID [5-zQyCurSoCBSNp1dJJFpg]
+[2017-06-29T08:59:38,387][INFO ][o.e.n.Node               ] [es-master-2805466080-9j3zn] version[5.4.3], pid[10], build[eed30a8/2017-06-22T00:34:03.743Z], OS[Linux/4.11.6-coreos-r1/amd64], JVM[Oracle Corporation/OpenJDK 64-Bit Server VM/1.8.0_131/25.131-b11]
+[2017-06-29T08:59:38,387][INFO ][o.e.n.Node               ] [es-master-2805466080-9j3zn] JVM arguments [-XX:+UseConcMarkSweepGC, -XX:CMSInitiatingOccupancyFraction=75, -XX:+UseCMSInitiatingOccupancyOnly, -XX:+DisableExplicitGC, -XX:+AlwaysPreTouch, -Xss1m, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djna.nosys=true, -Djdk.io.permissionsUseCanonicalPath=true, -Dio.netty.noUnsafe=true, -Dio.netty.noKeySetOptimization=true, -Dlog4j.shutdownHookEnabled=false, -Dlog4j2.disable.jmx=true, -Dlog4j.skipJansi=true, -XX:+HeapDumpOnOutOfMemoryError, -Xms256m, -Xmx256m, -Des.path.home=/elasticsearch]
+[2017-06-29T08:59:39,135][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [aggs-matrix-stats]
+[2017-06-29T08:59:39,136][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [ingest-common]
+[2017-06-29T08:59:39,136][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [lang-expression]
+[2017-06-29T08:59:39,136][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [lang-groovy]
+[2017-06-29T08:59:39,136][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [lang-mustache]
+[2017-06-29T08:59:39,136][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [lang-painless]
+[2017-06-29T08:59:39,136][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [percolator]
+[2017-06-29T08:59:39,136][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [reindex]
+[2017-06-29T08:59:39,137][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [transport-netty3]
+[2017-06-29T08:59:39,137][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] loaded module [transport-netty4]
+[2017-06-29T08:59:39,137][INFO ][o.e.p.PluginsService     ] [es-master-2805466080-9j3zn] no plugins loaded
+[2017-06-29T08:59:40,871][INFO ][o.e.d.DiscoveryModule    ] [es-master-2805466080-9j3zn] using discovery type [zen]
+[2017-06-29T08:59:41,326][INFO ][o.e.n.Node               ] [es-master-2805466080-9j3zn] initialized
+[2017-06-29T08:59:41,327][INFO ][o.e.n.Node               ] [es-master-2805466080-9j3zn] starting ...
+[2017-06-29T08:59:41,496][INFO ][o.e.t.TransportService   ] [es-master-2805466080-9j3zn] publish_address {10.244.12.3:9300}, bound_addresses {10.244.12.3:9300}
+[2017-06-29T08:59:41,506][INFO ][o.e.b.BootstrapChecks    ] [es-master-2805466080-9j3zn] bound or publishing to a non-loopback or non-link-local address, enforcing bootstrap checks
+[2017-06-29T08:59:44,574][INFO ][o.e.c.s.ClusterService   ] [es-master-2805466080-9j3zn] new_master {es-master-2805466080-9j3zn}{5-zQyCurSoCBSNp1dJJFpg}{ZtbPR2deRBq_ku1WKWioDA}{10.244.12.3}{10.244.12.3:9300}, added {{es-master-2805466080-g7hr5}{jldvP1AGThmwIezAvh3Psw}{oazHv7x0SJS_B29sI1ntlQ}{10.244.22.2}{10.244.22.2:9300},}, reason: zen-disco-elected-as-master ([1] nodes joined)[{es-master-2805466080-g7hr5}{jldvP1AGThmwIezAvh3Psw}{oazHv7x0SJS_B29sI1ntlQ}{10.244.22.2}{10.244.22.2:9300}]
+[2017-06-29T08:59:44,630][INFO ][o.e.n.Node               ] [es-master-2805466080-9j3zn] started
+[2017-06-29T08:59:44,696][INFO ][o.e.g.GatewayService     ] [es-master-2805466080-9j3zn] recovered [0] indices into cluster_state
+[2017-06-29T09:00:14,008][INFO ][o.e.c.s.ClusterService   ] [es-master-2805466080-9j3zn] added {{es-master-2805466080-fmjxw}{PtSOK-yhQ4uO38IsDGUbjA}{2_pmZFotQn6inISk-HKHnQ}{10.244.74.2}{10.244.74.2:9300},}, reason: zen-disco-node-join[{es-master-2805466080-fmjxw}{PtSOK-yhQ4uO38IsDGUbjA}{2_pmZFotQn6inISk-HKHnQ}{10.244.74.2}{10.244.74.2:9300}]
+[2017-06-29T09:00:48,629][INFO ][o.e.c.s.ClusterService   ] [es-master-2805466080-9j3zn] added {{es-client-3752325057-68zl4}{8XZe4xpgSa6hy4nhQ3Ejkw}{G4EJG0W5RoqCBMbkv53IFQ}{10.244.12.4}{10.244.12.4:9300},}, reason: zen-disco-node-join[{es-client-3752325057-68zl4}{8XZe4xpgSa6hy4nhQ3Ejkw}{G4EJG0W5RoqCBMbkv53IFQ}{10.244.12.4}{10.244.12.4:9300}]
+[2017-06-29T09:00:49,202][INFO ][o.e.c.s.ClusterService   ] [es-master-2805466080-9j3zn] added {{es-client-3752325057-rxk8p}{cV3b-TyyQ7m5wK-mnazBRQ}{tcEEmpP9RgOC2GzKkuYMnw}{10.244.22.3}{10.244.22.3:9300},}, reason: zen-disco-node-join[{es-client-3752325057-rxk8p}{cV3b-TyyQ7m5wK-mnazBRQ}{tcEEmpP9RgOC2GzKkuYMnw}{10.244.22.3}{10.244.22.3:9300}]
+[2017-06-29T09:01:24,633][INFO ][o.e.c.s.ClusterService   ] [es-master-2805466080-9j3zn] added {{es-data-2088356535-qbsrc}{7N4EZhVIQC6f3a_3m66ETQ}{AYxuAIthScy40LRK1EzeXQ}{10.244.74.3}{10.244.74.3:9300},}, reason: zen-disco-node-join[{es-data-2088356535-qbsrc}{7N4EZhVIQC6f3a_3m66ETQ}{AYxuAIthScy40LRK1EzeXQ}{10.244.74.3}{10.244.74.3:9300}]
+[2017-06-29T09:01:25,971][INFO ][o.e.c.s.ClusterService   ] [es-master-2805466080-9j3zn] added {{es-data-2088356535-kdsk8}{qAmcpDd5TA-SoBmD_Rmpcw}{3EhKm8e1SWq5OulNpa6TZA}{10.244.12.5}{10.244.12.5:9300},}, reason: zen-disco-node-join[{es-data-2088356535-kdsk8}{qAmcpDd5TA-SoBmD_Rmpcw}{3EhKm8e1SWq5OulNpa6TZA}{10.244.12.5}{10.244.12.5:9300}]
 ```
 
 As we can assert, the cluster is up and running. Easy, wasn't it?
@@ -129,28 +132,28 @@ As we can assert, the cluster is up and running. Easy, wasn't it?
 ```
 $ kubectl get svc elasticsearch
 NAME            CLUSTER-IP      EXTERNAL-IP   PORT(S)          AGE
-elasticsearch   10.100.75.158   <pending>     9200:31163/TCP   5m
+elasticsearch   10.100.254.59   <pending>     9200:30372/TCP   5m
 ```
 
 From any host on the Kubernetes cluster (that's running `kube-proxy` or similar), run:
 
 ```
-curl http://10.100.75.158:9200
+curl http://10.100.254.59:9200
 ```
 
 One should see something similar to the following:
 
 ```json
 {
-  "name" : "es-client-3170561982-mwfhs",
+  "name" : "es-client-3752325057-68zl4",
   "cluster_name" : "myesdb",
-  "cluster_uuid" : "TmidWUO6TJqFOd2WmHgg5Q",
+  "cluster_uuid" : "fwGbC7FnTGmRL9200RPVPA",
   "version" : {
-    "number" : "5.4.0",
-    "build_hash" : "780f8c4",
-    "build_date" : "2017-04-28T17:43:27.229Z",
+    "number" : "5.4.3",
+    "build_hash" : "eed30a8",
+    "build_date" : "2017-06-22T00:34:03.743Z",
     "build_snapshot" : false,
-    "lucene_version" : "6.5.0"
+    "lucene_version" : "6.5.1"
   },
   "tagline" : "You Know, for Search"
 }
@@ -159,7 +162,7 @@ One should see something similar to the following:
 Or if one wants to see cluster information:
 
 ```
-curl http://10.100.75.158:9200/_cluster/health?pretty
+curl http://10.100.254.59:9200/_cluster/health?pretty
 ```
 
 One should see something similar to the following:
@@ -183,35 +186,35 @@ One should see something similar to the following:
   "active_shards_percent_as_number" : 100.0
 }
 ```
-<a id="scheduling">
+<a id="pod-anti-affinity">
 
-## Scheduling pods
+## Pod anti-affinity
 
-One of the advantages of setting up a cluster is that ES is more resistent to restarting pods and/or nodes. However if all of your data pods are schedules onto the same node and this node is reset, your cluster will still have some downtime. 
-Therefor it is not recommanded that you use a single node to host your cluster. In case you have multiple nodes you can use the concept of pods affinity and anti-affinity to make sure pods of the same rc,deployment and/or statefulset are deployed on different nodes. 
-To make sure they are scheduled onto different nodes, we can use the `pod anti affinity`.
+One of the main advantages of running Elasticsearch on top of Kubernetes is how resilient the cluster becomes, particularly during
+node restarts. However if all data pods are scheduled onto the same node(s), this advantage decreases significantly and may even
+result in no data pods being available.
 
-Example in the case of our statefulset:
+It is then **highly recommended**, in the context of the solution described in this repository, that one adopts [pod anti-affinity](https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#inter-pod-affinity-and-anti-affinity-beta-feature)
+in order to guarantee that two data pods will never run on the same node.
+
+Here's an example:
+```yaml
+spec:
+  affinity:
+    podAntiAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+            - key: role
+              operator: In
+              values:
+              - data
+          topologyKey: kubernetes.io/hostname
+  containers:
+  - (...)
 ```
-   spec:
-      affinity:
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 100
-            podAffinityTerm:
-              labelSelector:
-                matchExpressions:
-                - key: role
-                  operator: In
-                  values:
-                  - data
-              topologyKey: kubernetes.io/hostname
-      containers:
-```
-
-Note: Inter-pod affinity and anti-affinity were introduced in Kubernetes 1.4
-
-[More information](https://kubernetes.io/docs/concepts/configuration/assign-pod-node/)
 
 <a id="helm">
 
